--- a/first_task/manifests/replicaset.yaml
+++ b/first_task/manifests/replicaset.yaml
@@ -23,4 +23,6 @@ spec:
                 name: my-configmap
       volumes:
         - name: logs
-          emptyDir: {}
+          hostPath:
+            path: /var/log/my-app
+            type: DirectoryOrCreate
