--- a/first_task/manifests/pod.yaml
+++ b/first_task/manifests/pod.yaml
@@ -14,4 +14,6 @@ spec:
           name: my-configmap
   volumes:
     - name: logs
-      emptyDir: {}
+      hostPath:
+        path: /var/log/my-app
+        type: DirectoryOrCreate
